--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <h1>Jonathan Moreira</h1>
     <h3>ingeniero informatico</h3>
-    <img src="C:\Users\Daniel Lindo\Desktop\Miprimeraweb\retosemana2" alt="Mi foto de perfil">
+    <img src="persona.png" alt="Mi foto de perfil">
 </head>
 <body>
     <hr>
