--- a/catalogo.html
+++ b/catalogo.html
@@ -4,18 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1><strong>CANIS LUPUS FAMILIARIS</strong></h1>
 </head>
 <body>
-    <p>El perro <strong><u>(Canis lupus familiaris)</u></strong> es un mamitero carnivoro de la familia de los canidos, una subespecie del lobo <strong><u>(Canis lupus)</u></strong> que acompaña a los humanos desde hace al menos 14 000 años Su tamaño forma y pelaje es muy diverso según la raza Posee un ordo y olfato muy desarrollados. Su vida promedio es de 15 años, aunque las razas pequeñas puede alcanzar una longevidad de 20 años</p>
-    <p>Hay aproximadamente 500 razas más que de cualquier otro animal que varian significativamente en tamaño, sonomia y temperamento Las razas do portos en sentido modemo comenzaron a partir de la precisa documentación de los pedigres que se establecen en el <span style="color:red">Kennel Club Inglés</span> en <span style="color:blue">1873</span>, a imitación de otros registros genealógicos para ganado y caballos.</p>
-    <hr>
-    <h1>YORKSHIRE TERRIER</h1>
-    <p>El yorkie se origino en Yorkshire, una región del norte de Inglaterra. A finales de 1865, un perro de exposición llamado Huddersfield Ben-que era uo Paisley terrier con tipo de Yorkshire terrier-propiedad de una mujer que vivia en Yorkshire, Mary Ann Foster, fue visto en las exposiciones caninas en toda Gran Bretaña, y fue quien definió el estándar de la raza denominada <strong><u>Yorkshire terrier</u></strong>. El nombre oficial de la raza se adoptó en <span style="color:blue">1870</span>.</p>
-    <img src="img/yorkshire.jpg" alt="YORKSHIRE TERRIER"/>
-    <hr>
-    <h1>Dogo Alemán</h1>
-    <p>El término alemán Dogge se aplicaba antiguamente a los perros grandes y fuertes que no pertenecian necesariamente a una raza en particular. En <span style="color:blue">1880</span>, durante una exposición levada a cabo en Berlin, se estableció el primer estándar para el <strong><u>Dogo alemán</u></strong>. Este ha sido controlado por el <span style="color:red">Deutscher Doggen-Club 1888 e.V</span> y alterado en algunas ocasiones a través de los años La versión actual se conforma al modelo de la <span style="color:red">Federacion Cinológica Internacional</span>.</p>
-    <img src="img/dogo-aleman.jpg" alt="Dogo Alemán">
+    <header>
+        <h1><strong>CANIS LUPUS FAMILIARIS</strong></h1>
+    </header>
+
+    <main>
+        <p>El perro <strong><u>(Canis lupus familiaris)</u></strong> es un mamitero carnivoro de la familia de los canidos, una subespecie del lobo <strong><u>(Canis lupus)</u></strong> que acompaña a los humanos desde hace al menos 14 000 años Su tamaño forma y pelaje es muy diverso según la raza Posee un ordo y olfato muy desarrollados. Su vida promedio es de 15 años, aunque las razas pequeñas puede alcanzar una longevidad de 20 años</p>
+        <p>Hay aproximadamente 500 razas más que de cualquier otro animal que varian significativamente en tamaño, sonomia y temperamento Las razas do portos en sentido modemo comenzaron a partir de la precisa documentación de los pedigres que se establecen en el <span style="color:red">Kennel Club Inglés</span> en <span style="color:blue">1873</span>, a imitación de otros registros genealógicos para ganado y caballos.</p>
+        <hr>
+        <h1>YORKSHIRE TERRIER</h1>
+        <p>El yorkie se origino en Yorkshire, una región del norte de Inglaterra. A finales de 1865, un perro de exposición llamado Huddersfield Ben-que era uo Paisley terrier con tipo de Yorkshire terrier-propiedad de una mujer que vivia en Yorkshire, Mary Ann Foster, fue visto en las exposiciones caninas en toda Gran Bretaña, y fue quien definió el estándar de la raza denominada <strong><u>Yorkshire terrier</u></strong>. El nombre oficial de la raza se adoptó en <span style="color:blue">1870</span>.</p>
+        <img src="img/yorkshire.jpg" alt="YORKSHIRE TERRIER"/>
+        <hr>
+        <h1>Dogo Alemán</h1>
+        <p>El término alemán Dogge se aplicaba antiguamente a los perros grandes y fuertes que no pertenecian necesariamente a una raza en particular. En <span style="color:blue">1880</span>, durante una exposición levada a cabo en Berlin, se estableció el primer estándar para el <strong><u>Dogo alemán</u></strong>. Este ha sido controlado por el <span style="color:red">Deutscher Doggen-Club 1888 e.V</span> y alterado en algunas ocasiones a través de los años La versión actual se conforma al modelo de la <span style="color:red">Federacion Cinológica Internacional</span>.</p>
+        <img src="img/dogo-aleman.jpg" alt="Dogo Alemán">
+    </main>
+
+    <footer>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html"> Ir a index</a>
+                </li>
+                <li>
+                    <a href="ensayo.html"> Ir a ensayo</a>
+                </li>
+            </ul>
+        </nav>    
+    </footer>
 </body>
 </html>
